@@ -1,3 +1,7 @@
+Mon Sep  1 01:53:52 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* test/test_cbc.sh: run tests for switch stmt.
+
 Mon Sep  1 01:49:23 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/parser/Parser.jj: pass location node to the
